Input, output y viewchild

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,6 +1,6 @@
-<!--==============================================================- ->
-<!-- Main wrapper - style you can find in pages.scss -->
-<!-- ============================================================== -->
+<!--==============================================================- 
+    Main wrapper - style you can find in pages.scss 
+    ============================================================== -->
 <div id="main-wrapper">
 
     <app-header></app-header>
@@ -17,6 +17,8 @@
         <!-- ============================================================== -->
         <div class="container-fluid">
             <app-breadcrums></app-breadcrums>
+
+            <router-outlet></router-outlet>
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
