--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <router-outlet></router-outlet>
+<div class="col-6">
+    <div class="card">
+        <div class="card-body">
+
+
+
+        </div>
+    </div>
+</div>
